# alex

./: database  deploy_ingestion_lecture80.md  deploy_sagemaker_lecture76.md  response.json
backend/: pyproject.toml  response.json  test_full.py
backend/api/: dependencies.py  main.py  package_docker.py
backend/api/routes/: alerts.py  todos.py
backend/api/schemas/: alerts.py  todos.py
backend/charter/: agent.py  lambda_handler.py  package_docker.py  test_simple.py
backend/common/: action_deriver.py  alert_engine.py  alert_service.py  alert_store.py  event_agent.py  event_todos.py  event_utils.py  events.py  job_tracker.py  test_job_tracker.py  todo_store.py  tools.py
backend/database/: run_migrations.py
backend/database/migrations/: 001_schema.sql
backend/database/src/: client.py  models.py
backend/planner/: agent.py  lambda_handler.py  market.py  package_docker.py  prices.py  pyproject.toml
backend/price_refresher/: lambda_handler.py  package_docker.py  pyproject.toml
backend/price_refresher_old/: lambda_handler.py  package_docker.py  package_lambda.py  pyproject.toml
backend/producers/: earnings_producer.py  price_producer.py  reporter_bridge.py  research_gap.py  retirement_bridge.py  risk_producer.py
backend/reporter/: agent.py  context.py  lambda_handler.py  package_docker.py  templates.py  tools.py
backend/researcher/: Dockerfile  context.py  deploy.py  mcp_servers.py  pyproject.toml  server.py  tools.py
backend/retirement/: agent.py  lambda_handler.py  package_docker.py  test_local_emit_event.py
backend/symbol_research/: package copy.py  package.py  pyproject.toml  worker.py
backend/tagger/: agent.py  package_docker.py  templates.py
frontend/: package-lock.json  package.json
guides/: Consolidated_arch_ALEX.md  alex_arch.md  alex_arch_alerts.md  alex_seq_diag.md  alex_seq_diag_alerts.md  consolidated_ALEX_Arch_2.md  (+2 more)
(+22 files in other folders)
